# MovieHubBot

./: README.md  app.json  bot.py  config.py  database.py  handlers.py  migrate_data.py  models.py  pyproject.toml  requirements.txt  utils.py
data/: movies.json
